# real_state_project

./: 404.html  Makefile  README.md  index.html  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md  product-design.md
getting-started/: index.html
product-design/: index.html
real_state_project/: __init__.py  dataset.py  features.py  plots.py
real_state_project/modeling/: predict.py  train.py
search/: search_index.json
