[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "real_state_project"
version = "0.0.1"
description = "Platform that helps users to obtain insights and relevant information on the real state market in Colombiawith their goals."
authors = [
  { name = "Sabia" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "mkdocs-material>=9.6.12",
    "pip",
    "polars>=1.29.0",
    "python-dotenv",
    "ray[default]>=2.46.0",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["real_state_project"]
include = ["pyproject.toml", "real_state_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["real_state_project"]
force-sort-within-sections = true

